@@ -97,6 +97,12 @@ edgeText=Transform (recipe, boiler)
 
 dana-select=Dana graph selection tool
 
+[mod-setting-name]
+dana-enable-top-left-button=Enable the top-left button [img=info]
+
+[mod-setting-description]
+dana-enable-top-left-button=Shows the button to open Dana on the top-left of the screen.
+
 [shortcut-name]
 
 dana-select-shortcut=Dana graph selection tool
