@@ -5,6 +5,7 @@ Version: 0.2.4
     - New toggleable shortcut (bottom-right button) to open/close Dana. (https://raw.githubusercontent.com/vsaulue/factorio-dana/assets/v0_2/dana-shortcut.png)
     - The Escape key now closes the mod.
     - Support of LuaPlayer::opened API. Other mods can close Dana when they want screen space, and inversely.
+    - New user mod setting: enable/disable the top-left mod-gui button.
   Changes:
     - Query frames can be dragged.
     - Removed the selection tool shortcut (bottom-right button).
